--- a/iOS/Kefi/Base.lproj/Main.storyboard
+++ b/iOS/Kefi/Base.lproj/Main.storyboard
@@ -43,14 +43,14 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="hashtagCell" id="MJE-zt-Rv9" customClass="HashtagCollectionCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="107" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="154" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="107" height="40"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="154" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KlZ-ew-8hp">
-                                                    <rect key="frame" x="5" y="5" width="96" height="30"/>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KlZ-ew-8hp">
+                                                    <rect key="frame" x="5" y="5" width="129" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <state key="normal" title="LustyIntentions">
@@ -60,16 +60,13 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <constraints>
-                                            <constraint firstAttribute="centerY" secondItem="KlZ-ew-8hp" secondAttribute="centerY" id="yLO-yc-8Ya"/>
-                                        </constraints>
-                                        <size key="customSize" width="107" height="40"/>
+                                        <size key="customSize" width="154" height="50"/>
                                         <connections>
                                             <outlet property="hashtagToggle" destination="KlZ-ew-8hp" id="Uyy-Qm-PuL"/>
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9wV-v0-ebD">
-                                        <rect key="frame" x="195" y="0.0" width="107" height="40"/>
+                                        <rect key="frame" x="164" y="5" width="107" height="40"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="107" height="40"/>
@@ -136,10 +133,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="dvh-km-6fZ"/>
                     <connections>
-                        <outlet property="HashtagView" destination="za6-dq-RZT" id="AFs-ca-K3l"/>
                         <outlet property="allView" destination="kh9-bI-dsS" id="cni-Xq-gdd"/>
                         <outlet property="distanceMi" destination="1b3-7j-1ZK" id="v5S-sn-3dh"/>
-                        <outlet property="hashtagView" destination="za6-dq-RZT" id="lgG-S7-e1D"/>
+                        <outlet property="hashtagView" destination="za6-dq-RZT" id="ihe-Dg-Vjk"/>
                         <outlet property="placeAddress" destination="Qbv-Lm-mTN" id="Tvv-oH-geV"/>
                         <outlet property="placeCrossStreets" destination="3jD-h4-ckB" id="Duf-Bo-qMN"/>
                     </connections>
